[package]
name = "isakmp"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]

[dependencies]
bitflags = "2"
bytes = "1"
anyhow = "1"
byteorder = "1"
rand = "0.8"
hex = "0.4"
tokio = { version = "1", features = ["time", "net"]}
futures = "0.3"
openssl = "0.10"
async-trait = "0.1"
parking_lot = "0.12"
tracing = "0.1"
itertools = "0.12"
cryptoki = "0.6"

[dev-dependencies]
opener = "0.7"
regex = "1"
once_cell = "1"
tokio = { version = "1", features = ["full"]}
tracing-subscriber = {  version = "0.3" , features = ["env-filter"]}
