[package]
name = "isakmp"
version = "0.1.0"
edition = "2024"
authors = ["Dmitry Pankratov <dmitry@pankratov.net>"]

[dependencies]
bitflags = "2"
bytes = { version = "1", features = ["serde"] }
anyhow = "1"
byteorder = "1"
rand = "0.9"
hex = "0.4"
tokio = { version = "1", features = ["time", "net", "sync", "rt", "io-util" ] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
openssl = "0.10"
async-trait = "0.1"
parking_lot = "0.12"
tracing = "0.1"
itertools = "0.14"
cryptoki = "0.9"
serde = { version = "1.0.208", features = ["rc", "derive"] }
rmp-serde = "1"
pnet_packet = "0.35"
pnet_macros = "0.35"
pnet_macros_support = "0.35"

[dev-dependencies]
opener = "0.8"
regex = "1"
once_cell = "1"
tokio = { version = "1", features = ["full"]}
tracing-subscriber = {  version = "0.3" , features = ["env-filter"]}
